// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Debug and troubleshoot production issues on Azure. Covers Container Apps and Function Apps diagnostics, log analysis with KQL, health checks, and common issue resolution for image pulls, cold starts, health probes, and function invocation failures. USE FOR: debug production issues, troubleshoot container apps, troubleshoot function apps, troubleshoot Azure Functions, analyze logs with KQL, fix image pull failures, resolve cold start issues, investigate health probe failures, check resource health, view application logs, find root cause of errors, function app not working, function invocation failures DO NOT USE FOR: deploying applications (use azure-deploy), creating new resources (use azure-prepare), setting up monitoring (use azure-observability), cost optimization (use azure-cost-optimization)",
  "extractedKeywords": [
    "analysis",
    "analyze",
    "application",
    "applications",
    "apps",
    "azure",
    "azure-cost-optimization",
    "azure-deploy",
    "azure-observability",
    "azure-prepare",
    "cause",
    "check",
    "checks",
    "cli",
    "cold",
    "common",
    "container",
    "cost",
    "covers",
    "creating",
    "debug",
    "deploying",
    "diagnostic",
    "diagnostics",
    "errors",
    "failures",
    "find",
    "function",
    "functions",
    "health",
    "image",
    "investigate",
    "invocation",
    "issue",
    "issues",
    "logs",
    "mcp",
    "monitor",
    "monitoring",
    "optimization",
    "probe",
    "probes",
    "production",
    "pull",
    "pulls",
    "resolution",
    "resolve",
    "resource",
    "resources",
    "root",
    "setting",
    "start",
    "starts",
    "troubleshoot",
    "view",
    "with",
    "working",
  ],
  "name": "azure-diagnostics",
}
`;

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "analysis",
  "analyze",
  "application",
  "applications",
  "apps",
  "azure",
  "azure-cost-optimization",
  "azure-deploy",
  "azure-observability",
  "azure-prepare",
  "cause",
  "check",
  "checks",
  "cli",
  "cold",
  "common",
  "container",
  "cost",
  "covers",
  "creating",
  "debug",
  "deploying",
  "diagnostic",
  "diagnostics",
  "errors",
  "failures",
  "find",
  "function",
  "functions",
  "health",
  "image",
  "investigate",
  "invocation",
  "issue",
  "issues",
  "logs",
  "mcp",
  "monitor",
  "monitoring",
  "optimization",
  "probe",
  "probes",
  "production",
  "pull",
  "pulls",
  "resolution",
  "resolve",
  "resource",
  "resources",
  "root",
  "setting",
  "start",
  "starts",
  "troubleshoot",
  "view",
  "with",
  "working",
]
`;
